--- a/src/beer-project/components/LandingPage/LandingPage.scss
+++ b/src/beer-project/components/LandingPage/LandingPage.scss
@@ -1,11 +1,5 @@
 @import "../../variables.scss";
 
-@keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .landing-page {
   display: flex;
   flex-direction: column;
